# ecvxcone

./: CMakeLists.txt  LICENSE  README.md
examples/: lmi.c  lmi.h
include/: blas.h  cvxopt.h  lapack.h  misc.h  solver.h
origin/c/: base.c  blas.c  dense.c  misc.h  sparse.c
origin/python/: coneprog.py
src/: base.c  blas.c  debug.c  dense.c  lapack.c  misc.c  solver.c  solver_utils.c  sparse.c  utils.c
tests/c/: test_base.c  test_blas.c  test_dense.c  test_lapack.c  test_main.c  test_misc.c  test_sparse.c  test_utils.c
tests/c/dummy_input/: G_sp.txt  h.txt
tests/c/input_matrix/: s.npy  s.txt  z.npy
tests/c/input_matrix/simplified/: G_sp.txt
tests/dummy_input/: G_sp.txt  h.txt  z.txt
tests/dummy_input/simplified/: h.txt
tests/python/: test_base.py  test_base_gemv.py  test_blas.py  test_lapack.py  test_misc.py
